Robo News: Fixed right side layout on tablet view

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -301,6 +301,7 @@ nav.white-header {
   float: left;
   min-height: 250px;
   clear: both;
+  margin-top: 25px;
 }
 .footer-inner {
   background: image-url("footer-bg.jpg") no-repeat 200px -1px;
